--- a/src/assets/scss/alexandre.scss
+++ b/src/assets/scss/alexandre.scss
@@ -1,7 +1,3 @@
-.btn-action {
-  margin-bottom: 40px;
-}
-
 .btn-login {
   border: none;
 
@@ -46,7 +42,7 @@
   h1,
   h2 {
     color: white;
-  } 
+  }
 }
 
 .lead {
@@ -138,7 +134,6 @@ iframe {
   color: white;
 }
 
-
 .color-discord {
   color: $discord;
 }
@@ -150,5 +145,49 @@ iframe {
 }
 
 .subtitle {
-  color: darkgray;
+  color: $default;
+}
+
+.navbar-dark .navbar-nav .nav-link {
+  color: white;
+
+  &.active,
+  &:hover {
+    color: $primary;
+  }
+}
+
+.navbar-nav {
+  .nav-link-icon {
+    color: white;
+
+    &.active,
+    &:hover {
+      color: $primary;
+    }
+  }
+}
+
+.dropdown-item {
+  color: $default;
+}
+
+.dropdown:hover,
+.dropdown:focus,
+.dropdown-item:hover,
+.dropdown-item:focus,
+.dropdown-item.active,
+.dropdown-item:active {
+  color: $primary;
+}
+
+@media (max-width: 991.98px) {
+  .navbar-nav {
+    .nav-link {
+      padding: 0;
+    }
+    .nav-item {
+      margin-bottom: 1rem;
+    }
+  }
 }
