--- a/src/assets/scss/alexandre.scss
+++ b/src/assets/scss/alexandre.scss
@@ -191,3 +191,14 @@ iframe {
     }
   }
 }
+
+.comunidade {
+  p,
+  li {
+    font-size: 1.25rem;
+    font-weight: 400;
+    line-height: 1.5;
+    margin-top: 1.5rem;
+    text-align: justify;
+  }
+}
