Fix Obrigado screen

--- a/src/assets/scss/alexandre.scss
+++ b/src/assets/scss/alexandre.scss
@@ -131,6 +131,13 @@ iframe {
   background-color: $discord;
   border-color: $discord;
   color: white;
+
+  &:hover,
+  &:focus {
+    background-color: $discord;
+    border-color: $discord;
+    color: white;
+  }
 }
 
 .subtitle {
