--- a/src/assets/scss/alexandre.scss
+++ b/src/assets/scss/alexandre.scss
@@ -169,7 +169,6 @@ iframe {
   p,
   li {
     font-size: 1.25rem;
-    font-weight: 400;
     line-height: 1.5;
     margin-top: 1.5rem;
     text-align: justify;
@@ -211,4 +210,8 @@ iframe {
     padding-right: 0;
     padding-left: 0;
   }
+}
+
+p {
+  font-weight: 400;
 }
