--- a/src/assets/scss/alexandre.scss
+++ b/src/assets/scss/alexandre.scss
@@ -45,14 +45,11 @@
   }
 }
 
-.lead {
-  font-weight: 400;
-}
-
 .footer {
   background-color: black;
 
   .copyright {
+    text-align: center;
     color: gray;
   }
 
@@ -77,6 +74,10 @@ h6 {
 
 .navbar-dark {
   background-color: black;
+}
+
+.navbar-nav .nav-link {
+  font-family: $font-family-base;
 }
 
 .navbar-dark .navbar-nav .nav-link:hover,
@@ -142,6 +143,8 @@ iframe {
 
 .subtitle {
   color: $default;
+  font-size: 12px;
+  font-weight: 500;
 }
 
 .navbar-dark .navbar-nav {
@@ -205,13 +208,21 @@ iframe {
       margin-left: 1rem;
     }
   }
-
-  .navbar-expand-lg .navbar-nav .nav-link {
-    padding-right: 0;
-    padding-left: 0;
-  }
 }
 
 p {
+  font-size: 17px;
+  line-height: 32px;
   font-weight: 400;
+  text-align: justify;
+}
+
+.lead {
+  font-size: 20px;
+  font-weight: 500;
+  text-align: justify;
+}
+
+.text-primary {
+  font-weight: 800;
 }
