--- a/src/assets/scss/alexandre_variables.scss
+++ b/src/assets/scss/alexandre_variables.scss
@@ -1,6 +1,8 @@
 $default: #4b4b4b !default;
 $primary: #dd3333 !default;
 
+$checkout: rgb(0, 197, 108) !default;
+
 $discord: #7289da !default;
 $telegram: #0088cc !default;
 
