Refactor conditional routes

--- a/src/assets/scss/alexandre.scss
+++ b/src/assets/scss/alexandre.scss
@@ -290,3 +290,11 @@ iframe {
 .vertical-timeline-element-subtitle {
   color: black !important;
 }
+
+.garantia {
+  text-align: center;
+  img {
+    max-width: 200px;
+    width: 100%;
+  }
+}
