Change text color

--- a/src/assets/scss/alexandre.scss
+++ b/src/assets/scss/alexandre.scss
@@ -269,6 +269,10 @@ iframe {
   display: block;
 }
 
+.checkout {
+  color: $checkout;
+}
+
 .btn-checkout {
   color: white;
   background-color: $checkout;
