--- a/src/assets/scss/alexandre.scss
+++ b/src/assets/scss/alexandre.scss
@@ -2,6 +2,13 @@ html {
   background-color: black;
 }
 
+.btn {
+  &.disabled {
+    cursor: wait;
+    transform: none;
+  }
+}
+
 .btn-login {
   border: none;
 
