--- a/src/assets/scss/alexandre.scss
+++ b/src/assets/scss/alexandre.scss
@@ -2,6 +2,10 @@ html {
   background-color: black;
 }
 
+.btn-lg, .btn-group-lg > .btn {
+  font-size: 1.2rem;
+}
+
 .btn {
   &.disabled {
     cursor: wait;
@@ -83,7 +87,7 @@ html {
   }
 
   img {
-    height: 20px;
+    height: 30px;
   }
 }
 
@@ -325,4 +329,9 @@ iframe {
 
 .bold {
   font-weight: bold;
+}
+
+
+.alert {
+  font-size: 1rem;
 }
