Adjust for mobile

--- a/src/assets/scss/alexandre.scss
+++ b/src/assets/scss/alexandre.scss
@@ -4,6 +4,7 @@ html {
 
 .btn-lg, .btn-group-lg > .btn {
   font-size: 1.2rem;
+  white-space: normal;
 }
 
 .btn {
@@ -330,7 +331,6 @@ iframe {
 .bold {
   font-weight: bold;
 }
-
 
 .alert {
   font-size: 1rem;
